--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,25 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"Node",
+"class": &"Level",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/level.gd"
+}, {
+"base": &"Resource",
+"class": &"LevelData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/level_data.gd"
+}, {
+"base": &"CharacterBody2D",
+"class": &"Player",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/player.gd"
+}, {
+"base": &"Control",
+"class": &"StartMenu",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/titlescreen.gd"
+}])
