--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/credits.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/", "res://assets/characterImages/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://audio/", "res://assets/characterImages/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/world.tscn", "res://scenes/titlescreen.tscn", "res://scenes/credits.tscn", "res://scenes/how_to_play.tscn")
-current_scene="res://scenes/titlescreen.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/world.tscn", "res://scenes/titlescreen.tscn", "res://scenes/credits.tscn", "res://scenes/how_to_play.tscn", "res://scenes/level0.tscn", "res://scenes/level2.tscn")
+current_scene="res://scenes/player.tscn"
+center_split_offset=-575
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/credits.gd", "res://scripts/how_to_play.gd", "res://scripts/player.gd", "res://scripts/titlescreen.gd"]
-selected_script="res://scripts/credits.gd"
+open_scripts=["res://scripts/credits.gd", "res://scripts/flag.gd", "res://scripts/how_to_play.gd", "res://scripts/level.gd", "res://scripts/player.gd", "res://scripts/titlescreen.gd"]
+selected_script="res://scripts/player.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
